@@ -34,6 +34,7 @@ Date: 2024-08-09
     - Reworked a bunch of stuff i've been putting off for ages.
     - Added gems to fully embrace the Bobs & Angels assimilation! Rubies, Citrines, Emeralds, Sapphires, Lapis Lazuli's and Garnets are now usable, some used as alternative ways to make resources or for lasers!
     - Added intermediate casting, using molten metals + some other ingredients, you can straight cast those fluids into wires and gears!
+    - Added another air filter recipe, unlockable at ATM science, which takes rubber, fiberglass and steel.
 
   Changes:
     - Gave glass its own row of recipes, and moved science bottles there.
@@ -108,6 +109,7 @@ Date: 2024-08-09
     - Changed Vinyl bromide PMMA plastic to take 20 methyl methacrylate instead of 25.
     - Changed all module lights glass input from 6 to 16.
     - Changed the first air filter recipe to take 4 nickel plates instead of 2 iron plates.
+    - Changed the first air filter recipe to take 1.5s, instead of 0.5s.
 
   Fixes:
     - Fixed some wood-related recipes not being in the same place.
